@@ -30,6 +30,8 @@
 
 #define GAME_AREA_WIDTH 60
 #define GAME_AREA_HEIGHT CANVAS_HEIGHT
+#define GAME_AREA_LEFT 0
+#define GAME_AREA_RIGHT (GAME_AREA_LEFT + GAME_AREA_WIDTH)
 
 void main_canvas_prev_render(Canvas* _cvs, s32 _elapsedTime);
 
